// Copyright 2015 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package distributor;

message Alias {
  string other_config = 1;
}

message Distributor {
  reserved 2; // future: generic pRPC based distributor
  reserved 3; // future: generic gRPC based distributor

  reserved 4; // future swarming_v1 distributor
  reserved 2048; // future jobsim distributor

  // TODO(iannucci): Maybe something like Any or extensions would be a better
  // fit here? The ultimate goal is that users will be able to use the proto
  // text format for luci-config. I suspect that Any or extensions would lose
  // the ability to validate such text-formatted protobufs, but maybe that's
  // not the case.
  oneof distributor_type {
    Alias alias = 1;
  }
}

message Config {
  map<string, Distributor> distributor_configs = 1;
}
